Fix creation of cookie file in root dir, instead write to the path in client.conf
Signed-off-by: Anurup M <anurup.m@huawei.com>
Change-Id: Ia232eb5a8675c512f4c0afe545230b79b62fd8d5

--- a/pulseaudio/BUILD.gn
+++ b/pulseaudio/BUILD.gn
@@ -24,6 +24,7 @@ group("pulseaudio_packages") {
     "$pulseaudio_build_path/src/pulse:pulse",
     "$pulseaudio_build_path/src:pa_daemon_config",
     "$pulseaudio_build_path/src:pa_default_config",
+    "$pulseaudio_build_path/src:pa_client_config",
     "$pulseaudio_build_path/src/pulse:pulse-simple",
     "$pulseaudio_build_path/src/pulse:pulse-mainloop-glib",
     "$pulseaudio_build_path/src/pulsecore:pulsecore",
