Static errors fix for audio_standard
Signed-off-by: Vaidegi B <vaidegi.b1@huawei.com>

--- a/interfaces/innerkits/native/audiopolicy/BUILD.gn
+++ b/interfaces/innerkits/native/audiopolicy/BUILD.gn
@@ -86,6 +86,7 @@ ohos_executable("audio_policy_test") {
 
     deps = [
         "//foundation/multimedia/audio_standard/interfaces/innerkits/native/audiomanager:audio_client",
+        "//third_party/bounds_checking_function:libsec_static",
     ]
 
   external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
