gtest cases added for audio policy
Signed-off-by: sulav <sulav.mulmi@huawei.com>

--- a/frameworks/innerkitsimpl/test/BUILD.gn
+++ b/frameworks/innerkitsimpl/test/BUILD.gn
@@ -16,6 +16,7 @@ group("audio_test") {
 
     deps = [
         "moduletest/renderer_test:moduletest",
-        "moduletest/recorder_test:audio_recorder_module_test"
+        "moduletest/recorder_test:audio_recorder_module_test",
+        "moduletest/audiopolicy:audio_policy_module_test"
     ]
 }
