PA-adaptor-implementation-for-audio_policy
Signed-off-by: Ashish Sawakar <ashish.sawakar@huawei.com>

--- a/services/BUILD.gn
+++ b/services/BUILD.gn
@@ -97,6 +97,7 @@ config("audio_policy_public_config") {
     "//foundation/multimedia/audio_standard/services/include/client",
     "//foundation/distributedschedule/safwk/services/safwk/include",
     "//foundation/multimedia/audio_standard/frameworks/innerkitsimpl/common/include",
+    "//foundation/multimedia/audio_standard/interfaces/innerkits/native/audioadapter/include",
     "//foundation/multimedia/audio_standard/interfaces/innerkits/native/audiocommon/include",
     "//foundation/multimedia/audio_standard/interfaces/innerkits/native/audiomanager/include",
     "//foundation/multimedia/audio_standard/services/src/audio_policy/server/service/include/common",
@@ -139,7 +140,7 @@ ohos_shared_library("audio_policy_service") {
     "//foundation/multimedia/audio_standard/services/src/audio_policy/server/audio_policy_server.cpp",
     "//foundation/multimedia/audio_standard/services/src/audio_policy/server/service/src/audio_policy_service.cpp",
     "//foundation/multimedia/audio_standard/services/src/audio_policy/server/service/src/config/xml_parser.cpp",
-    "//foundation/multimedia/audio_standard/services/src/audio_policy/server/service/src/manager/pulseaudio_policy_manager.cpp",
+    "//foundation/multimedia/audio_standard/services/src/audio_policy/server/service/src/manager/audio_adapter_manager.cpp",
   ]
 
   public_configs = [ ":audio_policy_public_config" ]
@@ -147,7 +148,7 @@ ohos_shared_library("audio_policy_service") {
   deps = [
     "//foundation/distributeddatamgr/distributeddatamgr/interfaces/innerkits/distributeddata:distributeddata_inner",
     "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/adapter:distributeddata_adapter",
-    "//foundation/multimedia/audio_standard/frameworks/innerkitsimpl/pulseaudio/src/pulse:pulse",
+    "//foundation/multimedia/audio_standard/frameworks/innerkitsimpl/audioadapter:pulse_audio_service_adapter",
     "//third_party/libxml2:xml2",
     "//utils/native/base:utils",
   ]
