Update DeviceType values and use new enum ActiveDeviceType enum for DeviceActive APIs
Signed-off-by: Vaidegi B <vaidegi.b1@huawei.com>

--- a/services/BUILD.gn
+++ b/services/BUILD.gn
@@ -99,6 +99,7 @@ config("audio_policy_public_config") {
     "//foundation/multimedia/audio_standard/frameworks/innerkitsimpl/common/include",
     "//foundation/multimedia/audio_standard/interfaces/innerkits/native/audioadapter/include",
     "//foundation/multimedia/audio_standard/interfaces/innerkits/native/audiocommon/include",
+    "//foundation/multimedia/audio_standard/interfaces/innerkits/native/audiopolicy/include",
     "//foundation/multimedia/audio_standard/interfaces/innerkits/native/audiomanager/include",
     "//foundation/multimedia/audio_standard/services/src/audio_policy/server/service/include/common",
     "//foundation/multimedia/audio_standard/services/src/audio_policy/server/service/include/interface",
