multichip audio configuration adaptation
Signed-off-by: Anurup M <anurup.m@huawei.com>

--- a/services/BUILD.gn
+++ b/services/BUILD.gn
@@ -164,7 +164,11 @@ ohos_shared_library("audio_policy_service") {
 }
 
 ohos_prebuilt_etc("audio_policy_config") {
-  source = "$AUDIO_POLICY_SERVER_DIR/etc/audio_policy_config.xml"
+  if (device_name == "rk3566" || device_name == "rk3568") {
+    source = "$AUDIO_POLICY_SERVER_DIR/etc/rk3568/audio_policy_config.xml"
+  } else {
+    source = "$AUDIO_POLICY_SERVER_DIR/etc/audio_policy_config.xml"
+  }
 
   subsystem_name = "multimedia"
   module_install_dir = "etc/audio"
