--- a/services/etc/pulseaudio.cfg
+++ b/services/etc/pulseaudio.cfg
@@ -2,6 +2,7 @@
     "jobs" : [{
             "name" : "post-fs-data",
             "cmds" : [
+                "rm /data/data/.pulse_dir/pid",
                 "mkdir /data/data/.pulse_dir",
                 "chmod 777 /data/data/.pulse_dir",
                 "chown system shell /data/data/.pulse_dir",
