Remove test apps installation in the image
Signed-off-by: Vaidegi B <vaidegi.b1@huawei.com>

--- a/interfaces/innerkits/native/audiocapturer/BUILD.gn
+++ b/interfaces/innerkits/native/audiocapturer/BUILD.gn
@@ -59,7 +59,7 @@ config("audio_external_library_config") {
 }
 
 ohos_executable("audio_capturer_test") {
-  install_enable = true
+  install_enable = false
 
   sources = [ "//foundation/multimedia/audio_standard/services/test/audio_capturer_test.cpp" ]
 
