add back suspend-on-idle to fix bt playback issue
Signed-off-by: magekkkk <lixin113@huawei.com>

--- a/frameworks/native/pulseaudio/src/modules/BUILD.gn
+++ b/frameworks/native/pulseaudio/src/modules/BUILD.gn
@@ -23,6 +23,7 @@ group("modules") {
     ":module-native-protocol-fd",
     ":module-native-protocol-tcp",
     ":module-native-protocol-unix",
+    ":module-suspend-on-idle",
   ]
 }
 
@@ -129,6 +130,22 @@ ohos_shared_library("module-cli-protocol-unix") {
     ":common_deps",
     "$pulseaudio_build_path/src/pulsecore:protocol-cli",
   ]
+
+  subsystem_name = "multimedia"
+  part_name = "multimedia_audio_framework"
+}
+
+ohos_shared_library("module-suspend-on-idle") {
+  sources = [ "$pulseaudio_dir/src/modules/module-suspend-on-idle.c" ]
+  cflags = [ "-DPA_MODULE_NAME=libmodule_suspend_on_idle_z_so" ]
+
+  ldflags = [
+    "-Wl",
+    "--no-undefined",
+  ]
+
+  configs = [ ":common_config" ]
+  deps = [ ":common_deps" ]
 
   subsystem_name = "multimedia"
   part_name = "multimedia_audio_framework"
