--- a/frameworks/native/audiorenderer/BUILD.gn
+++ b/frameworks/native/audiorenderer/BUILD.gn
@@ -24,6 +24,8 @@ ohos_shared_library("audio_renderer_sink") {
   cflags += [ "-Wall" ]
   if ("${product_name}" == "m40") {
     cflags += [ "-DPRODUCT_M40" ]
+  } else if ("${product_name}" == "Hi3751V350") {
+    cflags += [ "-DPRODUCT_Hi37XX" ]
   }
   cflags_cc = cflags
 
