--- a/services/audio_service/BUILD.gn
+++ b/services/audio_service/BUILD.gn
@@ -85,6 +85,7 @@ ohos_shared_library("audio_client") {
 
   external_deps = [
     "c_utils:utils",
+    "eventhandler:libeventhandler",
     "hisysevent_native:libhisysevent",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
