--- a/frameworks/native/hdiadapter/sink/BUILD.gn
+++ b/frameworks/native/hdiadapter/sink/BUILD.gn
@@ -50,7 +50,11 @@ ohos_shared_library("audio_renderer_sink") {
 
   part_name = "multimedia_audio_framework"
   subsystem_name = "multimedia"
-  external_deps = [ "c_utils:utils" ]
+  external_deps = [
+    "c_utils:utils",
+    "ipc:ipc_core",
+    "power_manager:powermgr_client",
+  ]
 }
 
 ohos_shared_library("bluetooth_renderer_sink") {
@@ -86,7 +90,11 @@ ohos_shared_library("bluetooth_renderer_sink") {
 
   part_name = "multimedia_audio_framework"
   subsystem_name = "multimedia"
-  external_deps = [ "c_utils:utils" ]
+  external_deps = [
+    "c_utils:utils",
+    "ipc:ipc_core",
+    "power_manager:powermgr_client",
+  ]
 }
 
 ohos_shared_library("remote_audio_renderer_sink") {
