--- a/services/audio_service/BUILD.gn
+++ b/services/audio_service/BUILD.gn
@@ -155,6 +155,7 @@ ohos_shared_library("audio_service") {
     "c_utils:utils",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
+    "power_manager:powermgr_client",
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
   ]
