monitor microphone authorization
Signed-off-by: huang-jianfei200 <huangjianfei3@huawei.com>
Change-Id: I80741b0c5a77a149759aa69efd32da1cd5060a5d

--- a/services/audio_policy/etc/audio_policy.cfg
+++ b/services/audio_policy/etc/audio_policy.cfg
@@ -13,6 +13,8 @@
             "path" : ["/system/bin/sa_main", "/system/profile/audio_policy.xml"],
             "uid" : "audio",
             "gid" : ["system", "audio"],
+            "permission" : ["ohos.permission.GET_SENSITIVE_PERMISSIONS","ohos.permission.REVOKE_SENSITIVE_PERMISSIONS"],
+            "permission_acls" : ["ohos.permission.GET_SENSITIVE_PERMISSIONS","ohos.permission.REVOKE_SENSITIVE_PERMISSIONS"],
             "disabled" : 1,
             "start-mode" : "condition",
             "secon" : "u:r:audio_policy:s0"
