--- a/services/audio_policy/BUILD.gn
+++ b/services/audio_policy/BUILD.gn
@@ -149,7 +149,11 @@ ohos_shared_library("audio_policy_service") {
   ]
 
   external_deps = [
+    "ability_base:want",
     "access_token:libaccesstoken_sdk",
+    "access_token:libtoken_setproc",
+    "bundle_framework:appexecfwk_base",
+    "bundle_framework:appexecfwk_core",
     "c_utils:utils",
     "hisysevent_native:libhisysevent",
     "hiviewdfx_hilog_native:libhilog",
