--- a/services/audio_policy/BUILD.gn
+++ b/services/audio_policy/BUILD.gn
@@ -148,6 +148,8 @@ ohos_shared_library("audio_policy_service") {
     "//foundation/barrierfree/accessibility/interfaces/innerkits/acfwk:accessibilityconfig",
     "//foundation/distributeddatamgr/kv_store/interfaces/innerkits/distributeddata:distributeddata_inner",
     "//foundation/multimedia/audio_framework/frameworks/native/audioadapter:pulse_audio_service_adapter",
+    "//foundation/multimedia/audio_framework/services/audio_policy:audio_config.para",
+    "//foundation/multimedia/audio_framework/services/audio_policy:audio_config.para.dac",
     "//foundation/multimedia/audio_framework/services/audio_policy:audio_dump",
     "//foundation/multimedia/audio_framework/services/audio_service:audio_client",
     "//third_party/libxml2:xml2",
@@ -193,6 +195,18 @@ ohos_prebuilt_etc("audio_tone_dtmf_config") {
   subsystem_name = "multimedia"
   relative_install_dir = "audio"
   part_name = "multimedia_audio_framework"
+}
+
+ohos_prebuilt_etc("audio_config.para") {
+  source = "//foundation/multimedia/audio_framework/services/audio_policy/etc/audio_config.para"
+  part_name = "multimedia_audio_framework"
+  module_install_dir = "etc/param"
+}
+
+ohos_prebuilt_etc("audio_config.para.dac") {
+  source = "//foundation/multimedia/audio_framework/services/audio_policy/etc/audio_config.para.dac"
+  part_name = "multimedia_audio_framework"
+  module_install_dir = "etc/param"
 }
 
 config("audio_policy_client_config") {
