--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -20,8 +20,10 @@ group("audio_unit_test") {
     "unittest/manager_test:audio_manager_unit_test",
     "unittest/opensles_capture_test:audio_opensles_capture_unit_test",
     "unittest/opensles_test:audio_opensles_unit_test",
+    "unittest/policy_test:audio_policy_unit_test",
     "unittest/renderer_test:audio_renderer_unit_test",
     "unittest/stream_manager_test:audio_stream_manager_unit_test",
+    "unittest/stream_test:audio_stream_unit_test",
     "unittest/volume_change_test:audio_volume_change_unit_test",
     "//foundation/multimedia/audio_framework/services/audio_service/test/unittest:audio_balance_test",
   ]
