fixed 6d64b21 from https://gitee.com/onthestreet/multimedia_audio_framework/pulls/1025 修复hdi和音频进程被kill时产生的crash问题
Signed-off-by: qianchang <qianchang1@huawei.com>
Change-Id: Ie9b91dc43febe19fcb9c8107f2f45305e405c1cd

--- a/services/audio_service/etc/pulseaudio.cfg
+++ b/services/audio_service/etc/pulseaudio.cfg
@@ -18,6 +18,10 @@
             "name" : "pulseaudio:restartaudio_policy_service",
             "cmds" : [
                 "stop audio_policy",
+                "stop audio_hdi_server_host",
+                "stop audio_host",
+                "start audio_hdi_server_host",
+                "start audio_host",
                 "start audio_policy"
             ]
         }
