--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -41,6 +41,9 @@ group("audio_fuzz_test") {
   deps = [
     "fuzztest/audiomanager_fuzzer:fuzztest",
     "fuzztest/audiopolicy_fuzzer:fuzztest",
+    "fuzztest/audiopolicyanother_fuzzer:fuzztest",
     "fuzztest/audioserver_fuzzer:fuzztest",
+    "fuzztest/audioserverbalance_fuzzer:fuzztest",
+    "fuzztest/audiostreamcollector_fuzzer:fuzztest",
   ]
 }
