fixed d3ac38a from https://gitee.com/yangliping/multimedia_audio_framework/pulls/1075 tdd test case
Signed-off-by: yangliping <yangliping18@huawei.com>

--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -22,6 +22,7 @@ group("audio_unit_test") {
     "unittest/opensles_test:audio_opensles_unit_test",
     "unittest/policy_test:audio_policy_unit_test",
     "unittest/renderer_test:audio_renderer_unit_test",
+    "unittest/routing_manager_test:audio_routing_manager_test",
     "unittest/stream_manager_test:audio_stream_manager_unit_test",
     "unittest/stream_test:audio_stream_unit_test",
     "unittest/volume_change_test:audio_volume_change_unit_test",
