--- a/frameworks/native/audiorenderer/BUILD.gn
+++ b/frameworks/native/audiorenderer/BUILD.gn
@@ -12,6 +12,7 @@
 # limitations under the License.
 
 import("//build/ohos.gni")
+import("//foundation/multimedia/audio_framework/audio_ohcore.gni")
 
 pulseaudio_dir = "//third_party/pulseaudio"
 
@@ -46,6 +47,12 @@ ohos_shared_library("audio_renderer") {
 
   configs = [ ":audio_renderer_config" ]
 
+  if ("${product_name}" == "ohcore") {
+    defines = [ "OHCORE" ]
+  }
+
+  include_dirs = audio_gateway_include_dirs
+
   sources = [
     "src/audio_renderer.cpp",
     "src/audio_renderer_proxy_obj.cpp",
@@ -55,6 +62,8 @@ ohos_shared_library("audio_renderer") {
     "//foundation/multimedia/audio_framework/services/audio_policy:audio_policy_client",
     "//foundation/multimedia/audio_framework/services/audio_service:audio_client",
   ]
+
+  deps += audio_renderer_gateway_deps
 
   public_configs = [ ":audio_external_library_config" ]
 
