fixed 3c9762e from https://gitee.com/zhangyafei-echo/multimedia_audio_framework/pulls/1128 IssueNo:#I67BIC Description:Use shared library instead of static. Sig:SIG_ApplicationFramework Feature or BugFix: Feature Binary Source: No
Signed-off-by: zhangyafei.echo <zhangyafei12@huawei.com>
Change-Id: I577394cbf29781da4ba52be35db2f1ac71aa91ea

--- a/frameworks/native/pulseaudio/modules/hdi/BUILD.gn
+++ b/frameworks/native/pulseaudio/modules/hdi/BUILD.gn
@@ -101,7 +101,7 @@ ohos_shared_library("module-hdi-source") {
     "$pulseaudio_build_path/src/pulse:pulse",
     "$pulseaudio_build_path/src/pulsecore:pulsecore",
     "//foundation/multimedia/audio_framework/frameworks/native/hdiadapter/source:capturer_source_adapter",
-    "//third_party/bounds_checking_function:libsec_static",
+    "//third_party/bounds_checking_function:libsec_shared",
   ]
 
   external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
