--- a/frameworks/native/hdiadapter/source/BUILD.gn
+++ b/frameworks/native/hdiadapter/source/BUILD.gn
@@ -37,7 +37,9 @@ ohos_shared_library("audio_capturer_source") {
   deps = [ "//foundation/multimedia/audio_framework/frameworks/native/audioutils:audio_utils" ]
   deps += [ multimedia_audio_framework_hdi_audio_client ]
 
-  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
+  external_deps = [ 
+    "hiviewdfx_hilog_native:libhilog",
+    "power_manager:powermgr_client", ]
 
   part_name = "multimedia_audio_framework"
   subsystem_name = "multimedia"
