AudioCapturerSource adds power lock processing
Signed-off-by: jiaoyanlin3 <jiaoyanlin3@huawei.com>

--- a/frameworks/native/hdiadapter/source/BUILD.gn
+++ b/frameworks/native/hdiadapter/source/BUILD.gn
@@ -39,7 +39,8 @@ ohos_shared_library("audio_capturer_source") {
 
   external_deps = [ 
     "hiviewdfx_hilog_native:libhilog",
-    "power_manager:powermgr_client", ]
+    "power_manager:powermgr_client",
+  ]
 
   part_name = "multimedia_audio_framework"
   subsystem_name = "multimedia"
@@ -74,7 +75,8 @@ ohos_shared_library("remote_audio_capturer_source") {
 
   external_deps = [ 
     "hiviewdfx_hilog_native:libhilog",
-    "power_manager:powermgr_client", ]
+    "power_manager:powermgr_client",
+  ]
 
   part_name = "multimedia_audio_framework"
   subsystem_name = "multimedia"
@@ -103,7 +105,8 @@ ohos_shared_library("audio_capturer_file_source") {
 
   external_deps = [ 
     "hiviewdfx_hilog_native:libhilog",
-    "power_manager:powermgr_client",]
+    "power_manager:powermgr_client",
+  ]
 
   part_name = "multimedia_audio_framework"
   subsystem_name = "multimedia"
@@ -144,7 +147,8 @@ ohos_shared_library("capturer_source_adapter") {
 
   external_deps = [ 
     "hiviewdfx_hilog_native:libhilog",
-    "power_manager:powermgr_client",]
+    "power_manager:powermgr_client",
+  ]
 
   part_name = "multimedia_audio_framework"
   subsystem_name = "multimedia"
