Accessibility: modify dependency relationship and testcases, use LF instead of CRLF
Signed-off-by: songshenke <songshenke@huawei.com>
Change-Id: Id46883169813623b2f005fa2639e5dc2bc4e015c

--- a/services/audio_service/test/unittest/BUILD.gn
+++ b/services/audio_service/test/unittest/BUILD.gn
@@ -24,10 +24,10 @@ config("module_private_config") {
   ]
 }
 
-ohos_unittest("audio_balance_test") {
+ohos_unittest("audio_balance_unit_test") {
   module_out_path = module_output_path
 
-  sources = [ "audio_balance_test.cpp" ]
+  sources = [ "audio_balance_unit_test.cpp" ]
 
   configs = [ ":module_private_config" ]
 
