--- a/accessibility.gni
+++ b/accessibility.gni
@@ -1,4 +1,4 @@
-# Copyright (c) 2022 Huawei Device Co., Ltd.
+# Copyright (c) 2023 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -11,9 +11,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-if (!defined(global_parts_info) ||
-    defined(global_parts_info.communication_bluetooth)) {
-  bluetooth_part_enable = true
+if (defined(global_parts_info) &&
+    defined(global_parts_info.barrierfree_accessibility)) {
+  accessibility_enable = true
 } else {
-  bluetooth_part_enable = false
+  accessibility_enable = false
 }
