新增audio同步接口UT
Signed-off-by: huyue57 <huyue57@huawei.com>
Change-Id: I8a9e892279e02d56521e98a5ca11ac9c79819822

--- a/frameworks/js/napi/audio_renderer/test/unittest/audio_renderer_test/BUILD.gn
+++ b/frameworks/js/napi/audio_renderer/test/unittest/audio_renderer_test/BUILD.gn
@@ -13,9 +13,9 @@
 
 import("//build/test.gni")
 
-module_output_path = "multimedia_audio_framework/audio_routing_manager_js"
+module_output_path = "multimedia_audio_framework/audio_renderer_js"
 
-ohos_js_unittest("AudioRoutingManagerJsTest") {
+ohos_js_unittest("AudioRendererJsUnitTest") {
   module_out_path = module_output_path
 
   hap_profile = "./config.json"
@@ -24,6 +24,5 @@ ohos_js_unittest("AudioRoutingManagerJsTest") {
 
 group("jsunittest") {
   testonly = true
-
-  deps = [ ":AudioRoutingManagerJsTest" ]
+  deps = [ ":AudioRendererJsUnitTest" ]
 }
